tests/paczka1/small_fuzzy/64938890.err
Error in line 3: mkk S910 235,67
Error in line 4: smT A431 76,1
Error in line 16: ZfCzFcvj S854 49,32
